styles/main.css
main {
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: var(--padding-md);
}

.choice-option {
    display: flex;
    gap: 2rem;

    @media (max-width: 940px) {
        flex-direction: column;
    }
}

.sort-wrapper {
    display: flex;
    align-items: center;
}

.sort-attributes {
    color: white;
    background-color: var(--color-button-blue);
    padding: var(--padding-xs) var(--padding-sm);
    border-radius: var(--padding-xs);
}

.sort-attributes:focus {
    opacity: 80%;
}

.filter-wrapper {
    display: flex;
    gap: 1rem;
    align-items: center;

    @media (max-width: 750px) {
        flex-direction: column;
        align-items: start;
    }
}

.filter-wrapper-p,
.sort-wrapper-name {
    white-space: nowrap;
}

#filter-form {
    display: flex;
    gap: 1rem;
    align-items: center;

    @media (max-width: 650px) {
        flex-direction: column;
        align-items: start;
    }
}

.filter-submit {
    background-color: var(--color-button-blue);
    color: white;
    border-radius: var(--padding-xs);
    padding: var(--padding-xs) var(--padding-sm);
    align-self: center;
}

.products-grid {
    flex: 1;
    padding: var(--padding-md);
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
    gap: var(--padding-md);
    justify-content: center;
}

.product {
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: hidden;
    border-radius: var(--padding-xs);
    padding: var(--padding-xs);
}

.product:hover {
    opacity: 80%;
    box-shadow: 0 0 5px gray;
}

.product-image {
    max-width: 100%;
    aspect-ratio: 1 / 1;
    min-width: 6rem;
}

